# testing_CI_module

./: pyproject.toml
.github/workflows/: run_tests.yml
test/: test_main.py
